use jpg portrait image instead of png

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <table> 
             <tr>
-                <td><img style= "height:120px;" src="./images/cv_portrait.png" alt="alberto venzo technical support"></td>
+                <td><img style= "height:120px;" src="./images/cv_portrait.jpg" alt="alberto venzo technical support"></td>
                 <td><h1 style="margin-right:120px;">Alberto Venzo</h1>
                     <p style="margin-right:120px;"><em>Electronic engineer</em>, 
                     <em>Technical Support DAS </em> <strong><a href="https://www.assaabloy.com">ASSA ABLOY</strong></a>        
